# cs231a

./: CMakeLists.txt  copyFile.sh  manifest.xml
include/segmentation_and_tracking/: #scene.h#  hand_segmenter_view_controller.h  scene.h
src/: #test_inrange.cpp#  baseline_segmenter.cpp  baseline_segmenter.cpp~  baseline_segmenter_1.cpp  bilateral_segmenter.cpp  bilateral_segmenter.cpp~  bilateral_segmenter_old.cpp  dist.cpp  evaluator.cpp  evaluator.cpp~  graphcuts_segmenter.cpp  graphcuts_segmenter.cpp~  hand_segmenter.cpp  hand_segmenter_view_controller.cpp  hand_segmenter_view_controller.cpp~  loop.cpp  loop2.cpp  node_potential.cpp  nographcuts_segmenter.cpp  nographcuts_segmenter.cpp~  scene.cpp  scene.cpp~  sn_segmenter.cpp  ssvm_learning.cpp  ssvm_learning2.cpp  test_inrange.cpp~  tracked_object.cpp
